grammar.js
    source_file: ($) =>
      choice(
        $.program_saty,
        $.program_satyh,
      ),

    program_satyh: $ => seq(
        optional($.headers),
        "module",
        $.module_name,
        optional(seq(":>", $._signature)),
        "=",
        $._module,
    ),

    _module: ($) =>
      choice(
        $.module_parened,
        $.module_path,
        $.module_functor_abstraction,
        $.module_functor_application,
        $.module_structure,
        $.module_coerction,
      ),

    _signature: ($) =>
      choice(
        $.signature_parened,
        $.signature_path,
        $.signature_functor,
        $.signature_structure,
        $.signature_with_bind_type,
      ),

    literal_length: (_) => {
      const digits = /[0-9]+/;
      return token(choice(
        seq(optional("-"), digits, /[a-z]+/),
        seq(optional("-"), digits, ".", optional(digits), /[a-z]+/),
        seq(optional("-"), optional(digits), ".", digits, /[a-z]+/),
      ));
    },

    literal_int: (_) =>
      token(choice(
        seq(
          choice("0x", "0X"),
          repeat1(/[A-F0-9]/),
        ),
        repeat1(/[0-9]/),
      )),

    literal_float: (_) => {
      const digits = repeat1(/[0-9]/);

      return token(
        choice(
          seq(digits, ".", optional(digits)),
          seq(optional(digits), ".", digits),
        ),
      );
    },

  },
});

function sep(rule, delimiter) {
  return seq(rule, repeat(seq(delimiter, rule)));
}

function optseq(rule) {
  return seq(rule, repeat(seq(delimiter, rule)));
}
