test/corpus/literals.txt
=======
integer
=======

let _ = 123
let _ = 0x12
let _ = 0xAB

---

(source_file
  (program_satyh
    (preamble
      (let_stmt
        (literal_int))
      (let_stmt
        (literal_int))
      (let_stmt
        (literal_int)))))

=======
float
=======

let _ = 1.23
let _ = .56
let _ = 0.

---

(source_file
  (program_satyh
    (preamble
      (let_stmt
        (literal_float))
      (let_stmt
        (literal_float))
      (let_stmt
        (literal_float)))))

=======
length
=======

let _ = 1.23pt
let _ = 0pt
let _ = 3cm
let _ = .3cm
let _ = -1.23pt

---

(source_file
  (program_satyh
    (preamble
      (let_stmt
        (literal_length))
      (let_stmt
        (literal_length))
      (let_stmt
        (literal_length))
      (let_stmt
        (literal_length))
      (let_stmt
        (literal_length)))))

=======
string
=======

let _ = `a`
let _ = ``a``
let _ = ``a` ``
let _ = ``a` ``#
let _ = #``a` ``#

---

(source_file
  (program_satyh
    (preamble
      (let_stmt
        (literal_string))
      (let_stmt
        (literal_string))
      (let_stmt
        (literal_string))
      (let_stmt
        (literal_string))
      (let_stmt
        (literal_string)))))
